# qr-code-scanner-wasm

./: Cargo.toml  README.md  index.html
nginx/: .gitignore
src/: main.rs  scan.rs  wasm_rxing.rs
styles/: index.scss  scanner.scss
