[package]
name = "test_yew_qrcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yew = "0.19"
gloo = "0.10"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "MediaDevices",
    "MediaStream",
    "HtmlCanvasElement",
    "HtmlVideoElement",
    "MediaStreamConstraints",
    "MediaTrackConstraints",
    "VideoFacingModeEnum",
    "MediaStreamTrack",
    "Navigator",
] }
js-sys = "0.3"
bardecoder = "0.5"
wasm-logger = "0.2.0"
log = "0.4.21"
base64 = "0.22.1"
image = "0.24"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
